# JobScraper

./: langgraph.json  pyproject.toml  start_dev.sh
src/: graph.py  initial_email.py  resume.txt  submission_email.py  testing.ipynb  writing_examples.py
