[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.1.0",
    "ipython>=9.7.0",
    "langchain>=1.0.5",
    "langchain-core>=1.0.4",
    "langchain-google-genai>=3.0.1",
    "langchain-openai>=1.0.2",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.4.7",
    "pip>=25.3",
    "python-docx>=1.2.0",
]
